@@ -1,0 +1,4 @@
+1, 2, 3, 4, 5, 6, 7, 8, 9, 10
+1, 2, 3, 4, 5, 6, 7, 8, 9 and 10
+using foldl:       10_9_8_7_6_5_4_3_2_1
+using chunk_foldl: 10_9_8_7_6_5_4_3_2_1
